--- a/docs/modules/ROOT/pages/amazon-sfn.adoc
+++ b/docs/modules/ROOT/pages/amazon-sfn.adoc
@@ -83,17 +83,6 @@ Finally, get the information about the state machine execution:
 aws stepfunctions describe-execution --execution-arn "$EXECUTION_ARN" --endpoint-url http://localhost:4566 --profile localstack
 ----
 
-== Solution
-The application built here allows to shoot elementary particles (quarks) into a `QuarksCollider` topic of the AWS SFN.
-Additionally, we create a resource that allows to subscribe to the `QuarksCollider` topic in order to receive published quarks.
-
-We recommend that you follow the instructions in the next sections and create the application step by step.
-However, you can go right to the completed example.
-
-Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
-
-The solution is located in the `amazon-sns-quickstart` {quickstarts-tree-url}/amazon-sns-quickstart[directory].
-
 == Creating the Maven project
 
 First, we need a new project. Create a new project with the following command:
@@ -102,11 +91,11 @@ First, we need a new project. Create a new project with the following command:
 ----
 mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectGroupId=org.acme \
-    -DprojectArtifactId=amazon-sns-quickstart \
-    -DclassName="org.acme.F.QuarksCannonSyncResource" \
-    -Dpath="/sync-cannon" \
-    -Dextensions="resteasy-reactive-jackson,amazon-sns"
-cd amazon-sns-quickstart
+    -DprojectArtifactId=amazon-sfn-quickstart \
+    -DclassName="org.acme.sfn.QuarkusSfnSyncResource" \
+    -Dpath="/sync" \
+    -Dextensions="resteasy-reactive-jackson,amazon-sfn"
+cd amazon-sfn-quickstart
 ----
 
 This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS and Amazon SFN Client extensions.
