--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -6,6 +6,7 @@
 * xref:amazon-s3.adoc[S3]
 * xref:amazon-secretsmanager.adoc[Secret Manager]
 * xref:amazon-ses.adoc[SES]
+* xref:amazon-sfn.adoc[SFN]
 * xref:amazon-sns.adoc[SNS]
 * xref:amazon-sqs.adoc[SQS]
 * xref:amazon-ssm.adoc[SSM]
