--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -2,7 +2,9 @@
 * xref:amazon-cognitouserpools.adoc[Cognito User Pools]
 * xref:amazon-dynamodb.adoc[DynamoDB]
 * xref:amazon-iam.adoc[IAM]
+* xref:amazon-kinesis.adoc[Kinesis]
 * xref:amazon-kms.adoc[KMS]
+* xref:amazon-lambda.adoc[Lambda]
 * xref:amazon-s3.adoc[S3]
 * xref:amazon-secretsmanager.adoc[Secret Manager]
 * xref:amazon-ses.adoc[SES]
@@ -11,5 +13,4 @@
 * xref:amazon-sqs.adoc[SQS]
 * xref:amazon-ssm.adoc[SSM]
 * xref:amazon-sts.adoc[STS]
-* xref:amazon-lambda.adoc[Lambda]
 * xref:dev-services.adoc[Dev Services for Amazon Services]
