feat: add support for aws crt-based sync client

--- a/docs/modules/ROOT/pages/amazon-cognitouserpools.adoc
+++ b/docs/modules/ROOT/pages/amazon-cognitouserpools.adoc
@@ -170,7 +170,7 @@ client dependency to the `pom.xml` file:
 </dependency>
 ----
 
-If you want to use Apache HTTP client instead, configure it as follows:
+If you want to use the Apache HTTP client instead, configure it as follows:
 [source,properties]
 ----
 quarkus.cognito-user-pools.sync-client.type=apache
@@ -182,6 +182,21 @@ And add the following dependency to the application `pom.xml`:
 <dependency>
     <groupId>software.amazon.awssdk</groupId>
     <artifactId>apache-client</artifactId>
+</dependency>
+----
+
+If you want to use the AWS CRT-based HTTP client instead, configure it as follows:
+[source,properties]
+----
+quarkus.cognito-user-pools.sync-client.type=aws-crt
+----
+
+And add the following dependency to the application `pom.xml`:
+[source,xml]
+----
+<dependency>
+    <groupId>software.amazon.awssdk</groupId>
+    <artifactId>aws-crt-client</artifactId>
 </dependency>
 ----
 
