--- a/docs/modules/ROOT/pages/amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/amazon-dynamodb.adoc
@@ -326,7 +326,7 @@ If you want to use the Apache HTTP client instead, configure it as follows:
 quarkus.dynamodb.sync-client.type=apache
 ----
 
-And add following dependency to the application `pom.xml`:
+And add the following dependency to the application `pom.xml`:
 [source,xml]
 ----
 <dependency>
@@ -334,6 +334,22 @@ And add following dependency to the application `pom.xml`:
     <artifactId>apache-client</artifactId>
 </dependency>
 ----
+
+If you want to use the AWS CRT-based HTTP client instead, configure it as follows:
+[source,properties]
+----
+quarkus.dynamodb.sync-client.type=aws-crt
+----
+
+And add the following dependency to the application `pom.xml`:
+[source,xml]
+----
+<dependency>
+    <groupId>software.amazon.awssdk</groupId>
+    <artifactId>aws-crt-client</artifactId>
+</dependency>
+----
+
 
 If you're going to use a local DynamoDB instance, configure it as follows:
 
