--- a/docs/modules/ROOT/pages/amazon-eventbridge.adoc
+++ b/docs/modules/ROOT/pages/amazon-eventbridge.adoc
@@ -81,20 +81,34 @@ you need to add a URL connection client dependency to the `pom.xml` file:
 </dependency>
 ----
 
-If you want to use Apache HTTP client instead, configure it as follows:
-
+If you want to use the Apache HTTP client instead, configure it as follows:
 [source,properties]
 ----
 quarkus.eventbridge.sync-client.type=apache
 ----
 
 And add the following dependency to the application `pom.xml`:
-
 [source,xml]
 ----
 <dependency>
     <groupId>software.amazon.awssdk</groupId>
     <artifactId>apache-client</artifactId>
+</dependency>
+----
+
+
+If you want to use the AWS CRT-based HTTP client instead, configure it as follows:
+[source,properties]
+----
+quarkus.eventbridge.sync-client.type=aws-crt
+----
+
+And add the following dependency to the application `pom.xml`:
+[source,xml]
+----
+<dependency>
+    <groupId>software.amazon.awssdk</groupId>
+    <artifactId>aws-crt-client</artifactId>
 </dependency>
 ----
 
